--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.password=root
 spring.jpa.show-sql=true
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
+
+logging.level.org.springframework=DEBUG
+logging.level.com.workguru=DEBUG
