adicionando documentação da API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,12 @@ spring.jpa.show-sql=true
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
 
+springdoc.oAuthFlow.authorizationUrl=http://127.0.0.1:8080/oauth2/authorize
+springdoc.oAuthFlow.tokenUrl=http://127.0.0.1:8080/oauth2/token
+
+springdoc.swagger-ui.oauth.client-id=angular
+springdoc.swagger-ui.oauth.client-secret=@ngul@r0
+
+springdoc.swagger-ui.oauth.use-pkce-with-authorization-code-grant=true
+springdoc.swagger-ui.oauth.use-basic-authentication-with-access-code-grant=true
 
